--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "argparse>=1.4.0",
+    "fastapi>=0.115.11",
     "jinja2>=3.1.5",
     "pypandoc>=1.15",
 ]
