--- a/jtrm-service/pyproject.toml
+++ b/jtrm-service/pyproject.toml
@@ -6,4 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.12",
+    "jtrm",
 ]
+
+[tool.uv.sources]
+jtrm = { path = "../jtrm-core", editable = true }
