--- a/jtrm-service/pyproject.toml
+++ b/jtrm-service/pyproject.toml
@@ -10,4 +10,4 @@ dependencies = [
 ]
 
 [tool.uv.sources]
-jtrm = { path = "../jtrm-core", editable = true }
+jtrm = { path = "../jtrm", editable = true }
