--- a/jtrm/pyproject.toml
+++ b/jtrm/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "argparse>=1.4.0",
+    "boto3>=1.38.17",
     "jinja2>=3.1.5",
     "pypandoc>=1.15",
+    "pytest>=8.4.0",
 ]
